--- a/fhirlib/test/Makefile
+++ b/fhirlib/test/Makefile
@@ -5,24 +5,28 @@
 # Inspired from https://github.com/FHIRCat/FHIRJsonLDAmiaPaper/
 # but (as of today) not using much copied over code.
 
-.PHONY: all clean fhir/examples fhir/examples-download fhir/examples-unzip
+.PHONY: all clean fhir/examples
 
 all: fhir/examples
 
 clean:
 	rm -rf fhir/examples
+
+fhir/examples/fhir-r4:
 	mkdir -p fhir/examples/fhir-r4
+
+fhir/examples/fhir-r5:
 	mkdir -p fhir/examples/fhir-r5
 
-examples: fhir/examples/downloaded fhir/examples/unzipped
+fhir/examples: fhir/examples/downloaded fhir/examples/unzipped
 
-examples/downloaded:
+fhir/examples/downloaded: fhir/examples/fhir-r4 fhir/examples/fhir-r5
 	wget --continue http://www.hl7.org/fhir/examples-json.zip -O fhir/examples/fhir-r4/examples-json.zip
 	wget --continue http://www.hl7.org/fhir/examples-ttl.zip -O fhir/examples/fhir-r4/examples-ttl.zip
 	wget --continue http://build.fhir.org/examples-json.zip -O fhir/examples/fhir-r5/examples-json.zip
 	wget --continue http://build.fhir.org/examples-ttl.zip -O fhir/examples/fhir-r5/examples-ttl.zip
 
-examples/unzipped: fhir/examples/downloaded
+fhir/examples/unzipped: fhir/examples/downloaded
 	rm -rf fhir/examples/fhir-r4/examples-json
 	unzip fhir/examples/fhir-r4/examples-json.zip -d fhir/examples/fhir-r4/examples-json
 	rm -rf fhir/examples/fhir-r4/examples-ttl
