--- a/fhirlib/package.json
+++ b/fhirlib/package.json
@@ -17,7 +17,8 @@
   "license": "ISC",
   "devDependencies": {
     "jest": "^27.3.1",
-    "lodash": "^4.17.21"
+    "lodash": "^4.17.21",
+    "retus": "^1.1.2"
   },
   "dependencies": {
     "@shexjs/node": "^1.0.0-alpha.15",
