--- a/fhirlib/package.json
+++ b/fhirlib/package.json
@@ -24,6 +24,7 @@
     "@shexjs/validator": "^1.0.0-alpha.17",
     "commander": "^8.3.0",
     "hierarchy-closure": "^1.2.1",
+    "hl7.terminology": "^3.1.0",
     "jsonld": "^5.2.0",
     "n3": "^1.11.2"
   }
