--- a/fhirlib/package.json
+++ b/fhirlib/package.json
@@ -16,7 +16,8 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "jest": "^27.3.1"
+    "jest": "^27.3.1",
+    "lodash": "^4.17.21"
   },
   "dependencies": {
     "@shexjs/node": "^1.0.0-alpha.15",
@@ -26,7 +27,6 @@
     "hierarchy-closure": "^1.2.1",
     "hl7.terminology": "^3.1.0",
     "jsonld": "^5.2.0",
-    "lodash": "^4.17.21",
     "n3": "^1.11.2"
   }
 }
