--- a/playground/manifest.json
+++ b/playground/manifest.json
@@ -1,16 +1,100 @@
 [
-  { "id": "patient", "title": "Patient", "icon": "icon-user",
-    "url": "../fhirlib/test/json/playground-Patient.json" },
-  { "id": "event", "title": "Observation", "icon": "icon-search",
-    "url": "../fhirlib/test/json/playground-Observation.json" },
-  { "id": "place", "title": "CodeSystem", "icon": "icon-book",
-    "url": "../fhirlib/test/json/playground-CodeSystem.json" },
-  { "id": "product", "title": "Medication 4.0", "icon": "icon-barcode",
-    "url": "../fhirlib/test/json/playground-Medication-4.0.1.json" },
-  { "id": "product", "title": "Medication 4.6", "icon": "icon-barcode",
-    "url": "../fhirlib/test/json/playground-Medication-4.6.0.json" },
-  { "id": "recipe", "title": "AllergyIntolerance", "icon": "icon-warning-sign",
-    "url": "../fhirlib/test/json/playground-AllergyIntolerance.json" },
-  { "id": "bundle", "title": "Bundle", "icon": "icon-briefcase",
-    "url": "../fhirlib/test/json/playground-Bundle.json" }
+	{
+		"id": "patient",
+		"title": "Patient (R4)",
+		"icon": "icon-user",
+		"url": "../fhirlib/test/json/playground-Patient-r4.json",
+                "active":true,
+		"version":"r4"
+ 
+	}
+	,{
+		"id": "event",
+		"title": "Observation (R4)",
+		"icon": "icon-search",
+		"url": "../fhirlib/test/json/playground-Observation-r4.json",
+                "active":true,
+		"version":"r4"
+	}
+	,{
+		"id": "place",
+		"title": "CodeSystem (R4)",
+		"icon": "icon-book",
+		"url": "../fhirlib/test/json/playground-CodeSystem-r4.json",
+                "active":true,
+		"version":"r4"
+	}
+	,{
+		"id": "product",
+		"title": "Medication (R4)",
+		"icon": "icon-barcode",
+		"url": "../fhirlib/test/json/playground-Medication-4.6.0.json",
+                "active":true,
+		"version":"r4"
+	}
+	,{
+		"id": "recipe",
+		"title": "AllergyIntolerance (R4)",
+		"icon": "icon-warning-sign",
+		"url": "../fhirlib/test/json/playground-AllergyIntolerance-r4.json",
+                "active":true,
+		"version":"r4"
+	}
+      ,{
+		"id": "bundle",
+		"title": "Bundle (R4)",
+		"icon": "icon-briefcase",
+		"url": "../fhirlib/test/json/playground-Bundle-r4.json",
+                "active":false,
+		"version":"r4"
+	}
+	,{
+		"id": "patient",
+		"title": "Patient (R5)",
+		"icon": "icon-user",
+		"url": "../fhirlib/test/json/playground-Patient-r5.json",
+                "active":true,
+		"version":"r5"
+ 
+	}
+	,{
+		"id": "event",
+		"title": "Observation (R5)",
+		"icon": "icon-search",
+		"url": "../fhirlib/test/json/playground-Observation-r5.json",
+                "active":true,
+		"version":"r5"
+	}
+	,{
+		"id": "place",
+		"title": "CodeSystem (R5)",
+		"icon": "icon-book",
+		"url": "../fhirlib/test/json/playground-CodeSystem-r5.json",
+                "active":true,
+		"version":"r5"
+	}
+	,{
+		"id": "product",
+		"title": "Medication (R5)",
+		"icon": "icon-barcode",
+		"url": "../fhirlib/test/json/playground-Medication-r5.json",
+                "active":true,
+		"version":"r5"
+	}
+	,{
+		"id": "recipe",
+		"title": "AllergyIntolerance (R5)",
+		"icon": "icon-warning-sign",
+		"url": "../fhirlib/test/json/playground-AllergyIntolerance-r5.json",
+                "active":true,
+		"version":"r5"
+	}
+      ,{
+		"id": "bundle",
+		"title": "Bundle (R5)",
+		"icon": "icon-briefcase",
+		"url": "../fhirlib/test/json/playground-Bundle-r5.json",
+                "active":false,
+		"version":"r5"
+	}
 ]
